# voxov-cli

./: Cargo.toml  README.md
src/: cli.rs  client.rs  config.rs  main.rs
