[package]
name = "voxov-cli"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
reqwest = { version = "0.11.18", features = ["blocking"] }

[[bin]]
name = "vc"
path = "src/main.rs"

[lib]
